--- a/questions/question.css
+++ b/questions/question.css
@@ -8,8 +8,6 @@
 
 #appBar {
     background-color: #131f24;
-    border-bottom: solid white 2px;
-    box-shadow: 2px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -17,6 +15,7 @@
     height: 100px;
     position: fixed;
     width: 100%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .optBtn {
