--- a/categories/categories.css
+++ b/categories/categories.css
@@ -7,8 +7,6 @@
 
 #appBar {
     background-color: #131f24;
-    border-bottom: solid white 2px;
-    box-shadow: 2px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -16,6 +14,7 @@
     height: 100px;
     position: fixed;
     width: 100%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .cat-btn {
@@ -42,6 +41,7 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
+    background-color: #eeeeee;
     border-radius: 16px;
     /* background: transparent; */
 }
@@ -74,7 +74,12 @@
     /* opacity: 0.6; */
     /* Reduce opacity for visual effect */
 }
-
+.cat-btn:disabled img{
+    background-color: red;
+}
+.cat-btn:disabled p {
+    background-color: red;
+}
 #submitBtn:hover {
     color: white;
     background-color: #5a3a86;
