--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: #131f24;
     box-sizing: border-box;
 }
-#appBar{
-    background-color:#131f24 ;
-    border-bottom: solid white 2px;
-    box-shadow: 2px;
+body
+{
+    background-color: #131f24;
+}
+#appBar {
+    background-color: #131f24;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,6 +16,7 @@
     height: 100px;
     position: fixed;
     width: 100%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 /* #content{
 
@@ -54,6 +56,7 @@
     padding: 1rem;
     border-radius: 16px;
     /* background: transparent; */
+    background-color: #eeeeee;
 }
 .cat-btn p{
     color: whitesmoke;
@@ -71,6 +74,25 @@
     cursor: pointer;
     width: fit-content;
     
+}
+#guidBook a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+#guidBook:hover{
+    color: white;
+    background-color: #5a3a86;
+}
+#guidBook{
+    background-color: #6f4ea1;
+    color: #eeeeee;
+    font-size: 1.5rem;
+    padding: 1rem 1.5rem;
+    gap: 0.5rem;
+    border-radius: 12px;
+    cursor: pointer;
+    width: fit-content;
+
 }
 #submitBtn:hover{
     color: white;
