--- a/scoreBoard/scoreBoard.css
+++ b/scoreBoard/scoreBoard.css
@@ -1,15 +1,16 @@
-* {
+body {
     margin: 0;
     padding: 0;
     background-color: #131f24;
     box-sizing: border-box;
-    color: white;
+    
 }
 
+*{
+    color: white;
+}
 #appBar {
     background-color: #131f24;
-    border-bottom: solid white 2px;
-    box-shadow: 2px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -17,6 +18,7 @@
     height: 100px;
     position: fixed;
     width: 100%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 .showScoreCard{
     display: flex;
@@ -37,6 +39,9 @@
     gap: 2rem;
     padding: 1rem;
     background-color: #58a700;
+}
+#finalImg{
+        background-color: #58a700;
 }
 #finalImg img{
     background-color: #58a700;
