--- a/categories/categories.css
+++ b/categories/categories.css
@@ -48,7 +48,7 @@
 
 .cat-btn p {
     color: whitesmoke;
-    font-size: larger;
+    font-size: 1.5rem;
     padding: 0.25rem 1rem;
     border-radius: 10px;
 }
